[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://bullet generator/generator.gd" type="Script" id=2]

[node name="Generator" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.25992 )
texture = ExtResource( 1 )

[node name="BulletShotTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="SpawnPoints" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[connection signal="timeout" from="BulletShotTimer" to="." method="_on_BulletShotTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
